--- a/Animated Login 3/index.html
+++ b/Animated Login 3/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login Page with Winter Snowfall Effect</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Span for snowfall Effect -->
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <!-- =================== -->
+    <section>
+      <form>
+        <h1>Login</h1>
+        <div class="inputbox">
+          <input type="email" required />
+          <label for="">Email</label>
+        </div>
+        <div class="inputbox">
+          <input type="password" required />
+          <label for="">Password</label>
+        </div>
+        <div class="forget">
+          <label for=""><input type="checkbox" /></label>
+        </div>
+        <button>Login</button>
+        <div class="register">
+          <p>Don't Have Account??<a href="#">Register</a></p>
+        </div>
+      </form>
+    </section>
+
+    <script src="script.js"></script>
+  </body>
+</html>
 
